<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.guest.madlibs.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="35dp"
        android:textStyle="bold"
        android:text="Mad Libs"
        android:id="@+id/title"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/title"
        android:id="@+id/adjective"
        android:hint="An adjective"
        android:gravity="center"
        android:singleLine="true"
        android:imeOptions="actionNext"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/adjective"
        android:id="@+id/gerund"
        android:hint="A gerund"
        android:gravity="center"
        android:singleLine="true"
        android:imeOptions="actionNext"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/gerund"
        android:id="@+id/name"
        android:hint="Your name"
        android:gravity="center"
        android:singleLine="true"
        android:imeOptions="actionNext"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/name"
        android:id="@+id/color"
        android:hint="Your favorite color"
        android:gravity="center"
        android:singleLine="true"
        android:imeOptions="actionNext"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/color"
        android:id="@+id/radio"
        android:orientation="horizontal"
        android:gravity="center">
        <RadioButton android:id="@+id/radio_story1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Story 1"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_story2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Story 2"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:textSize="20dp"
        android:paddingTop="5dp"
        android:layout_marginTop="15dp"
        android:layout_below="@id/radio"
        android:id="@+id/submitWords"/>
</RelativeLayout>
